# x_spider

./: main.py  pyproject.toml  readme.md
application/: database.py  dependencies.py  models.py  schemas.py
application/routers/: auth.py  tweets.py
application/service/: tweets.py  users.py
